<resources>
  <string name="app_name">FFK</string>
  <string name="title">Fight for Knowledge</string>
  <string name="play">Play</string>
  <string name="go">Go</string>
  <string name="question">Question</string>
  <string name="time">0</string>
  <string name="buttonA">A</string>
  <string name="buttonB">B</string>
  <string name="buttonC">C</string>
  <string name="buttonD">D</string>
  <string name="correct">You Won</string>
  <string name="wrong">You Died</string>
  <string name="next">Next</string>
  <string name="playagain">Play Again</string>
  <string name="wrongans">Oops..</string>
  <string name="loading">Loading...</string>
  <string name="stats">Shop</string>
  <string name="heal">About</string>
  <string name="last">Stats</string>
  <string name="waitScene">waitScene</string>
  <string name="hp1">hp1</string>
  <string name="hp2">hp2</string>
  <string name="ch1">Character</string>
  <string name="ch2">AI</string>
  <string name="back">Back</string>
  <string name="stat">Back</string>
  <string name="gold">0</string>
  <string name="health">+10 Health</string>
  <string name="strength">+10 Strength</string>
  <string name="buy">Everything is 5 GOLD!</string>
  <string name="credit">Credit by</string>
  <string name="credit2">Mert and Semi</string>
</resources>
