<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:fbutton="http://schemas.android.com/apk/res-auto"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme">

    <Button
      android:id="@+id/hpbar1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="5dp"
      android:layout_weight="1"
      android:background="@drawable/hp_bar1"
      android:paddingRight="3dp"
      android:text="@string/hp1" />

    <Button
      android:id="@+id/hpbar2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@drawable/hp_bar1"
      android:text="@string/hp2" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/ch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="150dp"
        android:gravity="left"
        android:text="@string/ch1" />

      <TextView
        android:id="@+id/ch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/ch2" />

    </LinearLayout>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".5"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/waitScene"
      fbutton:srcCompat="@drawable/fscreen3" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
      android:id="@+id/triviaQuestion"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:gravity="center"
      android:text="@string/question"
      android:textColor="@color/grey"
      android:textSize="18sp" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbarDefaultDelayBeforeFade="400">

    <Button
      android:id="@+id/buttonA"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonA"
      android:text="@string/buttonA" />

    <Button
      android:id="@+id/buttonB"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonB"
      android:text="@string/buttonB" />

    <Button
      android:id="@+id/buttonC"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonC"
      android:text="@string/buttonC" />

    <Button
      android:id="@+id/buttonD"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonD"
      android:text="@string/buttonD" />

  </LinearLayout>


</LinearLayout>
