<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".Shop">

  <TextView
    android:id="@+id/buy"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/buy"
    android:textSize="30sp" />

  <View
    android:id="@+id/view2"
    android:layout_width="match_parent"
    android:layout_height="50dp" />

  <Button
    android:id="@+id/health"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/health" />

  <Button
    android:id="@+id/strength"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/strength" />

  <Button
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/back" />

</LinearLayout>
