<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Menu">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"/>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

      <Button
        android:id="@+id/playGame"

        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginRight="60dp"

        android:background="@drawable/playbutton_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="3"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

      <Button
        android:id="@+id/shop"

        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/statsbutton_shape"

        android:shadowColor="#A8A8A8"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="3"
        android:text="@string/stats"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="185dp"
      android:gravity="center"
      android:orientation="horizontal">

      <Button
        android:id="@+id/heal"

        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"

        android:layout_marginRight="60dp"
        android:background="@drawable/healbutton_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="3"
        android:text="@string/heal"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

      <Button
        android:id="@+id/gold"

        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"

        android:background="@drawable/lastbutton_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="3"
        android:text="@string/last"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    </LinearLayout>
  </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
